Bug 614265 - Make paint server references to elements within an unknown SVG element subtree work again. r=longsonr a=b